# monty

./: 000.m  001.m  CMakeLists.txt  README.md  _atoi.c  _monty_lexer.c  _realloc.c  _string_toupper.c  _trim.c  _trim_inbtwn_spaces.c  get_op_func.c  main.c  monty.c  monty.h  monty_funcs.c
extras/monty/: monty.c  monty.h  montylexer.c
